# tacticalRPG

./: .gitignore  Gut.tscn  LICENSE  README.md  dijkstra_map.gdns  dijkstra_map_library.tres  new_gdnativelibrary.tres  new_nativescript.gdns  project.godot  template.gd
Autoload/: Constants.gd
design docs/: TODO  encours  encours~  ideas.md  next!
djikstra/: IDijkstra.gd~
djikstra/Test/: test_Djkstra.gd
gui/: theme.tres
rust/: .rustfmt.toml  Cargo.toml
rust/.bcp/game_manager/: todo.md
rust/.bcp/game_manager/src/: attack_solver.rs  entity_action.rs  game_manager_mod.rs  lib.rs  watcher.rs
rust/.bcp/game_manager/tests/: integration.rs
rust/.bcp/input_manager/: Cargo.toml
rust/.bcp/input_manager/src/: godot_interface.rs  lib.rs
rust/dijkstra_map/src/: get_maps.rs  grids.rs  lib.rs  setters.rs
rust/game-manager/: Cargo.toml
rust/game-manager/dijkstra_map/src/: getters.rs  grids.rs  lib.rs  setters.rs  trait_conversions_ops.rs
rust/game-manager/game_manager/: Cargo.toml  todo.md
rust/game-manager/input_manager/: Cargo.toml
rust/game_manager/: Cargo.toml
rust/game_manager/src/: attack_solver.rs  common_types.rs  entity_action.rs  game_manager_mod.rs  input_manager.rs  lib.rs  manager.rs  map.rs  test_impl.rs  turn_logic.rs  watcher.rs  world_manager.rs
rust/game_manager/src/map/: mod.rs  (+5 more)
rust/game_manager/tests/: integration.rs
rust/input_manager/: Cargo.toml
rust/input_manager/src/: godot_interface.rs  lib.rs
scenes/: basic_test.gd  basic_test.tscn
src/Test/: Gut.tscn
src/Test/Fight/: Testfight.gd
src/gameData/: FightActor.tres
(+143 files in other folders)
